--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
   border-radius: 30px;
   line-height: 1.5;
 }
+a:hover{
+  background-color: #F0F0F0;
+  color: #080808;
+}
 h1{
   margin: 0px;
   font-weight: bold;
