--- a/style.css
+++ b/style.css
@@ -20,6 +20,38 @@ a:hover{
   color: #080808;
   text-decoration-color: #F0F0F0;
 }
+a.discord{
+  color:#303eff;
+}
+a.discord:hover{
+  background: #303eff;
+  color: #080808;
+  text-decoration-color: #303eff;
+}
+a.bandcamp{
+  color: #00a2ff;
+}
+a.bandcamp:hover{
+  background: #00a2ff;
+  color: #080808;
+  text-decoration-color: #00a2ff;
+}
+a.spotify{
+  color: #00FF00;
+}
+a.spotify:hover{
+  background: #00FF00;
+  color: #080808;
+  text-decoration-color: #00FF00;
+}
+a.youtube{
+  color: #FF0000;
+}
+a.youtube:hover{
+  background: #FF0000;
+  color: #080808;
+  text-decoration-color: #FF0000;
+}
 h1{
   margin: 0px;
   font-weight: bold;
