--- a/style.css
+++ b/style.css
@@ -12,6 +12,16 @@ body {
   border-radius: 30px;
   line-height: 1.5;
 }
+.centered-container{
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, 50%);
+  width: 500px;
+  padding: 20px;
+  border: solid #F0F0F0 2px;
+  border-radius: 30px;
+  line-height: 1.5;}
 a{
   color: #F0F0F0;
 }
