--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ body {
   border: solid #F0F0F0 2px;
   border-radius: 30px;
   line-height: 1.5;}
+.text-container{
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, 50%);
+  width: 500px;
+  padding: 20px;
+  border: dashed #F0F0F0 2px;
+  line-height: 1.5;}
 a{
   color: #F0F0F0;
 }
