changed etc to nimi mute

--- a/style.css
+++ b/style.css
@@ -28,6 +28,15 @@ body {
   padding: 20px;
   border: dashed #F0F0F0 2px;
   line-height: 1.5;}
+.centered-text-container{
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, 50%);
+  width: 500px;
+  padding: 20px;
+  border: dashed #F0F0F0 2px;
+  line-height: 1.5;}
 a{
   color: #F0F0F0;
 }
