--- a/text-style.css
+++ b/text-style.css
@@ -29,7 +29,7 @@ a:hover{
   text-decoration-color: #F0F0F0;
 }
 h1{
-  text-align: left;
+  text-align: right;
   margin: 0px;
   font-weight: bold;
   font-style: italic;
