removed ucsur fonts

--- a/text-style.css
+++ b/text-style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #080808;
   color: #F0F0F0;
-  font-family: 'Roboto Serif', serif, "nasin-nanpa", "Fairfax HD";
+  font-family: 'Roboto Serif', serif;
 }
 b{
   font-weight: 800;
