--- a/text-style.css
+++ b/text-style.css
@@ -22,9 +22,13 @@ b{
   padding: 20px;
   border: dashed #F0F0F0 2px;
   line-height: 1.5;}
-a{color: #F0F0F0; font-weight: bold;}
+a{color: #F0F0F0;
+  font-weight: 800;
+  font-style: italic;}
 a:hover{
-  background: #F0F0F0; font-weight: bold;
+  background: #F0F0F0;
+  font-weight: 800;
+  font-style: italic;
   color: #080808;
   text-decoration-color: #F0F0F0;
 }
