--- a/style.css
+++ b/style.css
@@ -11,12 +11,17 @@ body {
   border-radius: 30px;
   line-height: 1.5;
 }
-.centered-container{
+.centered-grid-container{
+  display: grid;
+  grid-template-columns: auto auto;
+  width: 700px;
   position: absolute;
   left: 50%;
   bottom: 50%;
-  transform: translate(-50%, 50%);
-  width: 500px;
+  transform: translate(-50%, 50%);}
+.sidebox{
+  height: fit-content;
+  margin: 10px auto;
   padding: 20px;
   border: solid #F0F0F0 2px;
   border-radius: 30px;
