--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   height: fit-content;
   margin: 10px auto;
   padding: 20px;
+  padding-top: 17px;
   border: solid #F0F0F0 2px;
   border-radius: 30px;
   line-height: 1.5;}
