--- a/style.css
+++ b/style.css
@@ -11,6 +11,18 @@ body {
   border-radius: 30px;
   line-height: 1.5;
 }
+.centered-container{
+  grid-template-columns: auto auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  width: 500px;
+  margin: 10px auto;
+  padding: 20px;
+  border: solid #F0F0F0 2px;
+  border-radius: 30px;
+  line-height: 1.5;
+}
 .grid-container{
   display: grid;
   grid-template-columns: auto auto;
