--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
   grid-template-columns: auto auto;
   position: absolute;
   left: 50%;
-  transform: translate(-50%, 0%);
+  bottom: 50%;
+  transform: translate(-50%, 50%);
   width: 500px;
   margin: 10px auto;
   padding: 20px;
