--- a/text-style.css
+++ b/text-style.css
@@ -44,8 +44,7 @@ h1{
   margin: 0px;
   font-weight: bold;
   font-size: 40px;}
-ul {list-style-type: "↳ ";
-  font-size: larger;}
+ul {list-style-type: "↳ ";}
 hr{
   border: 0;
   border-top: 2px solid #F0F0F0;}
