--- a/text-style.css
+++ b/text-style.css
@@ -30,15 +30,12 @@ body {
   padding-top: 17px;
   border: dashed #F0F0F0 2px;}
 a{color: #F0F0F0;
-  font-weight: bold;
-  font-size: larger;}
+  font-weight: bold;}
 a:hover{
   background: #F0F0F0;
   font-weight: bold;
   color: #080808;
-  text-decoration-color: #F0F0F0;
-  font-size: larger;
-}
+  text-decoration-color: #F0F0F0;}
 h1{
   text-align: right;
   margin: 0px;
