--- a/style.css
+++ b/style.css
@@ -40,13 +40,11 @@ body {
   transform: translate(-50%, 50%);
   grid-gap:20px}
 .sidebox{
-  height: fit-content;
   margin: 10px auto;
-  padding: 20px;
-  padding-top: 17px;
+  padding: 10px;
   border: solid #F0F0F0 2px;
-  border-radius: 30px;
-  line-height: 1.5;}
+  border-radius: 20px;
+  text-align: center}
 a{color: #F0F0F0; font-weight: bold;}
 a:hover{
   background: #F0F0F0;
