--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ header{
   width: fit-content;
   margin: 10px auto;
   padding: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
   border: solid #F0F0F0 2px;
   border-radius: 20px;
   text-align: center}
