--- a/text-style.css
+++ b/text-style.css
@@ -15,20 +15,14 @@ body {
   width: 500px;
   padding: 20px;
   border: dashed #F0F0F0 2px;}
-.centered-grid-container{
-  display: grid;
-  grid-template-columns: auto auto;
-  position: absolute;
-  left: 50%;
-  bottom: 50%;
-  transform: translate(-50%, 50%);
-  grid-gap:20px}
-.sidebox{
-  height: fit-content;
+header{
+  width: fit-content;
   margin: 10px auto;
-  padding: 20px;
-  padding-top: 17px;
-  border: dashed #F0F0F0 2px;}
+  padding: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border: dashed #F0F0F0 2px;
+  text-align: center}
 a{color: #F0F0F0;
   font-weight: bold;}
 a:hover{
