--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ header{
   padding-left: 20px;
   border: solid #F0F0F0 2px;
   border-radius: 20px;
-  text-align: center}
+  text-align: center;
+  font-weight: bold;}
 a{color: #F0F0F0; font-weight: bold;}
 a:hover{
   background: #F0F0F0;
