--- a/text-style.css
+++ b/text-style.css
@@ -22,7 +22,8 @@ header{
   padding-right: 20px;
   padding-left: 20px;
   border: dashed #F0F0F0 2px;
-  text-align: center}
+  text-align: center;
+  font-weight: bold;}
 a{color: #F0F0F0;
   font-weight: bold;}
 a:hover{
