--- a/istyle.css
+++ b/istyle.css
@@ -5,4 +5,5 @@ body {
   font-family: 'Libre Baskerville', serif;
 }
 a{color: #9b9dac; font-weight: bold;}
-h1{font-style: italic;}
+h1{font-style: italic;
+font-size: xx-large;}
