--- a/istyle.css
+++ b/istyle.css
@@ -7,3 +7,4 @@ body {
 a{color: #9b9dac; font-weight: bold;}
 h1{font-style: italic;
 font-size: xxx-large;}
+ul {color: #9b9dac; font-weight: bold;}
