--- a/istyle.css
+++ b/istyle.css
@@ -4,7 +4,7 @@ body {
   color: #080808;
   font-family: 'Libre Baskerville', serif;
 }
-a{color: #9b9dac; font-weight: bold;}
+a{color: #53545b; font-weight: bold;}
 h1{font-style: italic;
 font-size: xxx-large;}
-ul {color: #9b9dac; font-weight: bold;}
+ul {color: #53545b; font-weight: bold;}
