--- a/istyle.css
+++ b/istyle.css
@@ -7,5 +7,7 @@ body {
 a{color: #53545b; font-weight: bold;}
 h1{font-style: italic;
 font-size: xxx-large;}
-ul {color: #53545b; font-weight: bold;}
+h2{font-style: italic;
+  font-size: xx-large;}
+ul {color: #53545b;}
 p{max-width: 500px;}
