--- a/istyle.css
+++ b/istyle.css
@@ -4,13 +4,13 @@ body {
   color: #080808;
   font-family: 'Libre Baskerville', serif;
 }
-a{font-weight: bold; font-style: italic;}
+a{font-weight: bold; color:#080808;font-style: italic;}
 a::after{content: "}"; color: #9b9dac;}
 a::before{content: "{"; color: #9b9dac;}
 h1{font-style: italic;
 font-size: xxx-large;}
 h1::after{content: "}"; color: #9b9dac;}
-ah1::before{content: "{"; color: #9b9dac;}
+h1::before{content: "{"; color: #9b9dac;}
 h2{font-style: italic;
   font-size: xx-large;}
 p{max-width: 750px;}
