--- a/istyle.css
+++ b/istyle.css
@@ -13,4 +13,5 @@ h1::after{content: "}"; color: #9b9dac;}
 h1::before{content: "{"; color: #9b9dac;}
 h2{font-style: italic;
   font-size: xx-large;}
+h2::before{content: "- "; color: #9b9dac;}
 p{max-width: 750px;}
