--- a/istyle.css
+++ b/istyle.css
@@ -2,8 +2,8 @@ body {
   padding-left: 50px;
   background-color: #fafbff;
   color: #080808;
-  font-family: 'Libre Baskerville', serif;
-}
+  font-family: 'Libre Baskerville', serif;}
+ul{line-height: 1.5;}
 a{font-weight: bold; color:#5d5e6c;font-style: italic;}
 a::after{content: "}"; color: #9b9dac;}
 a::before{content: "{"; color: #9b9dac;}
