--- a/i/miscstyle.css
+++ b/i/miscstyle.css
@@ -7,8 +7,11 @@ a{font-weight: bold;
   color:#f0f0f0;
   font-style: italic;
   text-decoration-color: #b0b0b0;}
-a:hover{text-decoration-color: #15c405;}
-h1{font-size: xxx-large;}
+a:hover{color: #15c405;
+  text-decoration-color: #15c405;}
+h1{font-size: xxx-large;
+  text-decoration: underline;
+  text-decoration-color: #15c405;}
 h1:before{content: "> ";color: #15c405}
 ul{list-style-type: "> ";}
 h2{font-size: xx-large;}
