--- a/i/miscstyle.css
+++ b/i/miscstyle.css
@@ -6,12 +6,14 @@ ul{line-height: 1.5;}
 a{font-weight: bold; 
   color:#f0f0f0;
   font-style: italic;
-  text-decoration-color: #b0b0b0;}
+  text-decoration-color: #b0b0b0;
+  text-decoration-thickness: 2px;}
 a:hover{color: #15c405;
   text-decoration-color: #15c405;}
 h1{font-size: xxx-large;
   text-decoration: underline;
-  text-decoration-color: #15c405;}
+  text-decoration-color: #15c405;
+  text-decoration-thickness: 5px;}
 h1:before{content: "> ";color: #15c405}
 ul{list-style-type: "> ";}
 h2{font-size: xx-large;}
