--- a/i/miscstyle.css
+++ b/i/miscstyle.css
@@ -6,7 +6,7 @@ ul{line-height: 1.5;}
 a{font-weight: bold; 
   color:#f0f0f0;
   font-style: italic;
-  text-decoration-color: #b0b0b0;
+  text-decoration-color: #808080;
   text-decoration-thickness: 2px;}
 a:hover{color: #15c405;
   text-decoration-color: #15c405;}
