--- a/i/miscstyle.css
+++ b/i/miscstyle.css
@@ -18,4 +18,4 @@ h1:before{content: "> ";color: #15c405}
 ul{list-style-type: "> ";}
 h2{font-size: xx-large;}
 h2:before{content: "- "; color: #15c405;}
-p{max-width: 750px;}
+ul, p{max-width: 750px;}
