--- a/styles/style.css
+++ b/styles/style.css
@@ -2,25 +2,10 @@ body {
   background-color: #080808;
   color: #F0F0F0;
   font-family: 'Inter', sans-serif;
-}
-.container{
-  width: 500px;
-  margin: 10px auto;
-  padding: 20px;
-  border: solid #F0F0F0 2px;
-  border-radius: 30px;
   line-height: 1.5;
-}
-header{
-  width: fit-content;
-  margin: 10px auto;
-  padding: 10px;
-  padding-right: 20px;
-  padding-left: 20px;
-  border: solid #F0F0F0 2px;
-  border-radius: 20px;
-  text-align: center;
-  font-weight: bold;}
+  display: flex; 
+  flex-direction: row; 
+  margin: 0px}
 
 a{color: #f0f0f0; font-weight: bold; text-decoration-color: #808080; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #F0F0F0}
@@ -40,10 +25,8 @@ a.cafe:hover{color: #9D3C00;}
 h1{
   margin: 0px;
   font-weight: bold;
-  font-style: italic;
-}
+  font-size: xxx-large; 
+  font-style: normal; 
+  margin-top: 20px; 
+  text-shadow: #202020 5px 5px}
 ul {list-style-type: "↳ ";}
-hr{
-  border: 0;
-  border-top: 2px solid #F0F0F0;
-}
