--- a/styles/style.css
+++ b/styles/style.css
@@ -30,3 +30,10 @@ h1{
   margin-top: 20px; 
   text-shadow: #202020 5px 5px}
 ul {list-style-type: "↳ ";}
+p, ul{max-width: 750px; line-height: 1.5;}
+
+nav{padding: 0px; 
+    background-color:#202020; 
+    min-height: 100vh; 
+    border-right: solid #f0f0f0 2px; 
+    margin-right: 50px}
