--- a/styles/text-style.css
+++ b/styles/text-style.css
@@ -1,44 +1,33 @@
 body {
   background-color: #080808;
   color: #F0F0F0;
-  font-family: 'Atkinson Hyperlegible', sans-serif;}
-.container{
-  width: 500px;
-  margin: 10px auto;
-  padding: 20px;
-  border: dashed #F0F0F0 2px;}
-.centered-container{
-  position: absolute;
-  left: 50%;
-  bottom: 50%;
-  transform: translate(-50%, 50%);
-  width: 500px;
-  padding: 20px;
-  border: dashed #F0F0F0 2px;}
-header{
-  width: fit-content;
-  margin: 10px auto;
-  padding: 10px;
-  padding-right: 20px;
-  padding-left: 20px;
-  border: dashed #F0F0F0 2px;
-  text-align: center;
-  font-weight: bold;}
-a{color: #F0F0F0;
-  font-weight: bold;}
+  font-family: 'Atkinson Hyperlegible', sans-serif;
+  display: flex; 
+  flex-direction: row; 
+  margin: 0px}
+a{color: #f0f0f0; font-weight: bold; text-decoration-color: #808080; text-decoration-thickness: 2px;}
+a:hover{text-decoration-color: #F0F0F0}
 a:hover{
   background: #F0F0F0;
   font-weight: bold;
   color: #080808;
   text-decoration-color: #F0F0F0;}
 h1{
-  text-align: right;
   margin: 0px;
   font-weight: bold;
-  font-size: 40px;}
+  font-size: xxx-large; 
+  font-style: normal; 
+  margin-top: 20px; 
+  text-shadow: #202020 5px 5px}
 ul {list-style-type: "↳ ";
   font-size: larger}
-hr{
-  border: 0;
-  border-top: 2px solid #F0F0F0;}
 p{font-size: larger;}
+p, ul{max-width: 750px; line-height: 1.5;}
+nav{padding: 0px; 
+  background-color:#202020; 
+  min-height: 100vh; 
+  border-right: solid #f0f0f0 2px; 
+  margin-right: 50px;
+  position: fixed;
+  width: 125px}
+.main{margin-left: 175px}
