--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,8 @@ body {
   line-height: 1.5;
   display: flex; 
   flex-direction: row; 
-  margin: 0px}
+  margin: 0px;
+  font-size: large}
 
 a{color: #f0f0f0; font-weight: bold; text-decoration-color: #808080; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #F0F0F0}
