--- a/styles/text-style.css
+++ b/styles/text-style.css
@@ -27,5 +27,6 @@ nav{padding: 0px;
   border-right: dashed #f0f0f0 2px; 
   margin-right: 50px;
   position: fixed;
-  width: 125p}
+  width: 125px}
+hr{color: #f0f0f0}
 .main{margin-left: 175px}
