--- a/styles/istyle.css
+++ b/styles/istyle.css
@@ -2,17 +2,25 @@ body {
   padding-left: 50px;
   background-color: #fafbff;
   color: #080808;
-  font-family: 'Libre Baskerville', serif;}
-ul{line-height: 1.5;}
+  font-family: 'Libre Baskerville', serif;
+  line-height: 1.5;
+  display: flex; 
+  flex-direction: row; 
+  margin: 0px;
+  font-size: large}
 a{font-weight: bold; color:#5d5e6c;font-style: italic;}
 a:hover{font-weight: bold; color:#080808;font-style: italic;}
-a::after{content: "}"; color: #9b9dac;}
-a::before{content: "{"; color: #9b9dac;}
 h1{font-style: italic;
 font-size: xxx-large;}
-h1::after{content: "}"; color: #9b9dac;}
-h1::before{content: "{"; color: #9b9dac;}
 h2{font-style: italic;
   font-size: xx-large;}
 h2::before{content: "- "; color: #9b9dac;}
 p{max-width: 750px;}
+nav{padding: 0px; 
+  background-color:#202020; 
+  min-height: 100vh; 
+  border-right: solid #f0f0f0 2px; 
+  margin-right: 50px;
+  position: fixed;
+  width: 150px}
+.main{margin-left: 200px}
