--- a/styles/istyle.css
+++ b/styles/istyle.css
@@ -11,6 +11,7 @@ a{font-weight: bold; color: #080808; text-decoration-color:#5d5e6c;font-style: i
 a::after{content: "}"; color: #808080;}
 a::before{content: "{"; color: #808080;}
 a:hover{text-decoration-color:#080808;}
+a.button::after, a.button::before{content:""}
 h1{font-style: italic;
 font-size: xxx-large;}
 h2{font-style: italic;
