--- a/styles/logstyle.css
+++ b/styles/logstyle.css
@@ -1,7 +1,7 @@
 body {
   background-color: #080400;
   color: #ffac68;
-  font-family: 'Inter', sans-serif;
+  font-family: 'IBM Plex Mono', sans-serif;
   line-height: 1.5;
   display: flex; 
   flex-direction: row; 
