--- a/styles/logstyle.css
+++ b/styles/logstyle.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #080400;
-  color: #ffac68;
+  background-color: #000000;
+  color: #ffa900;
   font-family: 'IBM Plex Mono', sans-serif;
   line-height: 1.5;
   display: flex; 
@@ -8,8 +8,8 @@ body {
   margin: 0px;
   font-size: large}
 
-a{color: #ff7300; font-weight: bold; text-decoration-color: #803900; text-decoration-thickness: 2px;}
-a:hover{text-decoration-color: #ff7300}
+a{color: #ffa900; font-weight: bold; text-decoration-color: #a87000; text-decoration-thickness: 2px;}
+a:hover{text-decoration-color: #ffa900}
 
 h1{
   margin: 0px;
@@ -17,14 +17,14 @@ h1{
   font-size: xxx-large; 
   font-style: normal; 
   margin-top: 20px; 
-  text-shadow: #220f00 5px 5px}
+  text-shadow: #543800 5px 5px}
 ul {list-style-type: "↳ ";}
 p, ul{max-width: 750px; line-height: 1.5;}
 
 nav{padding: 0px; 
-    background-color:#220f00; 
+    background-color: #543800; 
     min-height: 100vh; 
-    border-right: solid #ffac68 2px; 
+    border-right: solid #ffa900 2px; 
     margin-right: 50px;
     position: fixed;
     width: 150px}
