--- a/styles/logstyle.css
+++ b/styles/logstyle.css
@@ -8,7 +8,7 @@ body {
   margin: 0px;
   font-size: large}
 
-a{color: #ffa900; font-weight: bold; text-decoration-color: #a87000; text-decoration-thickness: 2px;}
+a{color: #ffa900; font-weight: bold; font-style: italic; text-decoration-color: #a87000; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #ffa900}
 
 h1{
