--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -7,7 +7,7 @@
   src: url("Verab.ttf")}
 
 body {
-  background-color: #080808;
+  background-color: #020013;
   color: #FDE59F;
   font-family: 'Vera Humana 95', sans-serif;
   line-height: 1.5;
@@ -16,7 +16,7 @@ body {
   margin: 0px;
   font-size: large}
 
-a{color: #FDE59F; font-weight: bold; text-decoration-color: #808080; text-decoration-thickness: 2px;}
+a{color: #FDE59F; font-weight: bold; text-decoration-color: #0f008a; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #FDE59F}
 
 h1{
@@ -24,13 +24,12 @@ h1{
   font-weight: bold;
   font-size: xxx-large; 
   font-style: normal; 
-  margin-top: 20px; 
-  text-shadow: #202020 5px 5px}
+  margin-top: 20px}
 ul {list-style-type: "↳ ";}
 p, ul{max-width: 750px; line-height: 1.5;}
 
 nav{padding: 0px; 
-    background-color:#202020; 
+    background-color:#040024; 
     min-height: 100vh; 
     border-right: solid #FDE59F 2px; 
     margin-right: 50px;
