--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -8,7 +8,7 @@
 
 body {
   background-color: #020013;
-  color: #FDE59F;
+  color: #F2CF68;
   font-family: 'Vera Humana 95', sans-serif;
   line-height: 1.5;
   display: flex; 
@@ -16,8 +16,8 @@ body {
   margin: 0px;
   font-size: large}
 
-a{color: #FDE59F; font-weight: bold; text-decoration-color: #0f008a; text-decoration-thickness: 2px;}
-a:hover{text-decoration-color: #FDE59F}
+a{color: #F2CF68; font-weight: bold; text-decoration-color: #0f008a; text-decoration-thickness: 2px;}
+a:hover{text-decoration-color: #F2CF68}
 
 h1{
   margin: 0px;
@@ -31,7 +31,7 @@ p, ul{max-width: 750px; line-height: 1.5;}
 nav{padding: 0px; 
     background-color:#040024; 
     min-height: 100vh; 
-    border-right: solid #FDE59F 2px; 
+    border-right: solid #F2CF68 2px; 
     margin-right: 50px;
     position: fixed;
     width: 150px}
