--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,10 @@ body {
   margin: 0px;
   font-size: large}
 
-a{color: #f0f0f0; text-decoration-color: #808080; text-decoration-thickness: 2px;}
+a{color: #f0f0f0; font-weight: bold;text-decoration-color: #808080; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #F0F0F0}
+
+a.small{font-weight: normal}
 
 a.discord{text-decoration-color: #303eff;}
 a.discord:hover{color: #303eff;}
