--- a/toki-pona/style.css
+++ b/toki-pona/style.css
@@ -3,7 +3,9 @@ body {
   color: #f0f0f0;
   font-family: 'Work Sans', sans-serif;
   line-height: 1.5;
-  font-size: large}
+  font-size: x-large;
+  margin: 20px;
+  margin-left: 100px}
 
 a{color: #f0f0f0; font-weight: bold;text-decoration-color: #808080; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #F0F0F0}
@@ -12,4 +14,5 @@ a.small{font-weight: normal; text-decoration-thickness: 1px}
 h1{
   font-weight: bold;
   font-size: xxx-large;
-  text-decoration: underline}
+  text-decoration: underline;
+  margin: 0px}
