--- a/toki-pona/style.css
+++ b/toki-pona/style.css
@@ -1,7 +1,11 @@
+@font-face{font-family: 'nasin-nanpa';
+  font-weight: normal;
+  src: url("nasin-nanpa-2.5.1.otf")}
+
 body {
   background-color: #202020;
   color: #f0f0f0;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Work Sans', 'nasin-nanpa', sans-serif;
   line-height: 1.5;
   font-size: x-large;
   margin: 20px;
