--- a/toki-pona/style.css
+++ b/toki-pona/style.css
@@ -30,6 +30,10 @@ p{max-width: 800px}
 u, s{text-decoration-color:#808080;
 text-decoration-thickness: 2px}
 
+.r{text-decoration-color: #e91000}
+.y{text-decoration-color: #ffee00}
+.b{text-decoration-color: #0068f1}
+
 img{float: right;
   margin-left: 0px;
   margin-right: -150px;
