--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -19,7 +19,8 @@ ul{list-style-type: "> ";}
 h2{font-size: xx-large;}
 h2:before{content: "- "; color: #15c405;}
 ul, p{max-width: 750px;}
-.crt::before {
+
+crt::before {
   content: " ";
   display: block;
   position: absolute;
@@ -27,7 +28,7 @@ ul, p{max-width: 750px;}
   left: 0;
   bottom: 0;
   right: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.25) 50%);
+  background: linear-gradient(rgba(4, 4, 4, 0.04) 50%, rgba(0, 0, 0, 0.34) 50%);
   z-index: 2;
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;}
