--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -5,7 +5,7 @@ body {
   line-height: 1.5;
   margin: 0px;
   font-size: large;
-  padding-left: 70px}
+  padding-left: 70px; padding-top: 70px}
 
 a{color: #f0f0f0; font-weight: bold;text-decoration-color: #808080; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #F0F0F0}
