--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -13,7 +13,7 @@ a:hover{text-decoration-color: #F0F0F0}
 h1{
   margin: 0px;
   font-weight: bold;
-  font-size: 70px; 
+  font-size: xxx-large; 
   font-style: normal; 
   margin-top: 20px; 
   text-shadow: #202020 7px 7px}
