--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -10,6 +10,12 @@ body {
 a{color: #f0f0f0; font-weight: bold;text-decoration-color: #808080; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #F0F0F0}
 
+nav{padding: 0px;  
+  min-height: 100vh; 
+  margin-right: 50px;
+  position: fixed;
+  width: 150px}
+
 h1{
   margin: 0px;
   font-weight: bold;
