--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -9,6 +9,7 @@ body {
 
 a{color: #f0f0f0; font-weight: bold;text-decoration-color: #808080; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color: #F0F0F0}
+a.small{font-weight: normal; text-decoration-thickness: 1px}
 
 nav{padding: 0px;  
   min-height: 100vh; 
