--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ p, ul{max-width: 750px; line-height: 1.5;}
 nav{padding: 0px; 
     min-height: 100vh; 
     margin-right: 50px;
+    padding-left: 20px;
     position: fixed;
     width: 150px}
 
