--- a/styles/logstyle.css
+++ b/styles/logstyle.css
@@ -22,9 +22,10 @@ ul {list-style-type: "↳ ";}
 p, ul{max-width: 750px; line-height: 1.5;}
 
 nav{padding: 0px; 
-    min-height: 100vh; 
-    margin-right: 50px;
-    position: fixed;
-    width: 150px}
+  min-height: 100vh; 
+  margin-right: 50px;
+  padding-left: 20px;
+  position: fixed;
+  width: 150px}
 
 .main{margin-left: 200px}
