--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -31,6 +31,7 @@ p, ul{max-width: 750px; line-height: 1.5;}
 nav{padding: 0px; 
   min-height: 100vh; 
   margin-right: 50px;
+  padding-left: 20px;
   position: fixed;
   width: 150px}
 
