--- a/styles/istyle.css
+++ b/styles/istyle.css
@@ -25,3 +25,6 @@ nav{padding: 0px;
   position: fixed;
   width: 150px}
 .main{margin-left: 200px}
+#drawings{line-height:0;column-count: 3; column-gap:3px}
+#drawings img{margin-bottom: -3px; width: 100%}
+#drawings img:hover{transform: scale(125%)}
