--- a/styles/anotherstyle.css
+++ b/styles/anotherstyle.css
@@ -5,6 +5,5 @@ body {
   line-height: 1.5;
   margin: 0px;
   font-size: large}
-h1{font-style: italic;
-font-weight: bold;
+h1{font-weight: bold;
 font-size: xxx-large;}
