--- a/styles/anotherstyle.css
+++ b/styles/anotherstyle.css
@@ -3,7 +3,8 @@ body {
   color: #f0f0f0;
   font-family: 'Work Sans', sans-serif;
   line-height: 1.5;
-  margin: 0px;
+  margin: 20px;
   font-size: large}
 h1{font-weight: bold;
-font-size: xxx-large;}
+font-size: 75px;
+line-height: 0.9}
