--- a/ap/anotherstyle.css
+++ b/ap/anotherstyle.css
@@ -3,6 +3,7 @@ body {
   color: #f0f0f0;
   font-family: 'Work Sans', sans-serif;
   line-height: 1.5;
+  margin: 0px;
   font-size: xx-large}
 h1{font-weight: bold;
 font-size: 150px;
