--- a/ap/anotherstyle.css
+++ b/ap/anotherstyle.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Work Sans', sans-serif;
   line-height: 1.5;
   margin: 0px;
-  font-size: xx-large}
+  font-size: x-large}
 h1{font-weight: bold;
 font-size: 150px;
 line-height: 0.9;
