--- a/newsite/style.css
+++ b/newsite/style.css
@@ -7,12 +7,14 @@ body {
   font-size: large}
 
 .main{
-  width: 650px;
-  padding: 20px;
-  border: solid #a0a0a0 2px;
-  margin: 20px auto;
-  border-radius: 30px;
+  max-width: 650px;
+  padding: 20px 40px;
+  border-left: solid #a0a0a0 2px;
+  border-right: solid #a0a0a0 2px;
+  margin: 0 auto;
   line-height: 1.5;}
+
+.back{padding-top:0}
 
 h1{
   margin: 0;
@@ -22,5 +24,5 @@ h1{
 a{color: #404040}
 a:hover{background-color: #404040; color: #f0f0f0; text-decoration-color: #404040;}
 
-ul {list-style-type: "↳ ";}
-p, ul{line-height: 1.5; margin-bottom: 0}
+ul {list-style-type: "└ ";}
+p, ul{line-height: 1.4; margin-bottom: 0}
