--- a/newsite/style.css
+++ b/newsite/style.css
@@ -4,27 +4,27 @@ body {
   color: #404040;
   font-family: 'Inter', sans-serif;
   line-height: 1.5;
-  margin: 0px;
-  height: 100vh}
+  margin: 0px}
 
-.main{
-  padding: 20px 40px;
-  border-left: solid #a0a0a0 2px;
-  border-right: solid #a0a0a0 2px;
-  margin: 0 30px;}
+.main{padding: 20px 40px;}
 
 .back{padding-top:0}
 
 h1{
   margin: 0;
   font-weight: bold;
-  font-size: 2rem}
+  font-size: 3rem}
 
 a{color: #404040}
 a:hover{background-color: #404040; color: #f0f0f0; text-decoration-color: #404040;}
 
 ul {list-style-type: "└ ";}
 p, ul{line-height: 1.4; margin-bottom: 0}
+
+.page{margin: 0 auto; width: min(85%, 50rem);
+  border-left: solid #a0a0a0 2px;
+  border-right: solid #a0a0a0 2px;
+  min-height: 100vh}
 
 /* desktop 
 @media only screen and (min-width: 850px) {
