--- a/newsite/style.css
+++ b/newsite/style.css
@@ -4,9 +4,10 @@ body {
   color: #404040;
   font-family: 'Inter', sans-serif;
   line-height: 1.5;
+  font-size: 1rem;
   margin: 0px}
 
-.main{padding: 20px 40px;}
+.main{padding: 1rem 2rem;}
 
 .back{padding-top:0}
 
