--- a/newsite/style.css
+++ b/newsite/style.css
@@ -14,7 +14,7 @@ body {
 h1{
   margin: 0;
   font-weight: bold;
-  font-size: 3rem}
+  font-size: min(7vw, 3rem)}
 
 a{color: #404040}
 a:hover{background-color: #404040; color: #f0f0f0; text-decoration-color: #404040;}
