--- a/newsite/styles/miscstyle.css
+++ b/newsite/styles/miscstyle.css
@@ -28,7 +28,7 @@ h1{text-decoration: underline;
   text-decoration-thickness: 3px;}
 h1:before{content: "> ";color: #15c405}
 ul{list-style-type: "> "; padding-left: 20px}
-h2{font-size: xx-large;}
+h2{font-size: 1.5rem;}
 h2:before{content: "- "; color: #15c405;}
 
 p, ul{line-height: 1.4; margin-bottom: 0; font-size: 1rem}
