--- a/newsite/styles/miscstyle.css
+++ b/newsite/styles/miscstyle.css
@@ -13,7 +13,8 @@ body {
 h1{
   margin: 0;
   font-weight: bold;
-  font-size: min(6.5vw, 3rem)}
+  font-size: 2rem;
+  line-height: 1.2}
 
 a{font-weight: bold; 
   color:#f0f0f0;
