--- a/newsite/styles/text-style.css
+++ b/newsite/styles/text-style.css
@@ -19,7 +19,7 @@ a{color: #404040; font-weight: bold; text-decoration-thickness: 2px;}
 a:hover{background-color: #404040; color: #d0d0d0; text-decoration-color: #404040;}
 
 ul {list-style-type: "└ "; padding-left: 20px}
-p, ul{line-height: 1.4; margin-bottom: 0; font-size: 1.25rem}
+p, ul{line-height: 1.4; margin-bottom: 0; font-size: min(1.25rem, 5vw)}
 
 .page{margin: 0 auto; width: min(85%, 35rem);
   border-left: solid #a0a0a0 2px;
