--- a/newsite/styles/text-style.css
+++ b/newsite/styles/text-style.css
@@ -13,7 +13,8 @@ body {
 h1{
   margin: 0;
   font-weight: bold;
-  font-size: 2.5rem}
+  font-size: 2.5rem;
+  line-height: 1.2}
 
 a{color: #404040; font-weight: bold; text-decoration-thickness: 2px;}
 a:hover{background-color: #404040; color: #d0d0d0; text-decoration-color: #404040;}
