--- a/newsite/styles/sitestyle.css
+++ b/newsite/styles/sitestyle.css
@@ -20,7 +20,8 @@
   h1{
     margin: 0;
     font-weight: bold;
-    font-size: min(8vw, 3rem)}
+    font-size: min(8vw, 3rem);
+    line-height: 1.2}
   
   a{color: #f2cf68}
   a:hover{background-color: #f2cf68; color: #020013; text-decoration-color: #f2cf68;}
