--- a/newsite/styles/style.css
+++ b/newsite/styles/style.css
@@ -13,7 +13,8 @@ body {
 h1{
   margin: 0;
   font-weight: bold;
-  font-size: min(6.5vw, 3rem)}
+  font-size: min(6.5vw, 3rem);
+  line-height: 1.2}
 
 a{color: #404040}
 a:hover{background-color: #404040; color: #f0f0f0; text-decoration-color: #404040;}
