--- a/misc/folder/style.css
+++ b/misc/folder/style.css
@@ -1,49 +1,60 @@
 body {
-  background-color: #080808;
-  color: #F0F0F0;
-  font-family: 'Inter', sans-serif;
-  line-height: 1.5;
-  display: flex; 
-  flex-direction: row; 
-  margin: 0px;
-  font-size: large}
-
-a{color: #f0f0f0; font-weight: bold;text-decoration-color: #808080; text-decoration-thickness: 2px;}
-a:hover{text-decoration-color: #F0F0F0}
-
-a.small{font-weight: normal; text-decoration-thickness: 1px}
-
-a.discord{text-decoration-color: #303eff;}
-a.discord:hover{color: #303eff;}
-
-a.bandcamp, a.bandcampbold{text-decoration-color: #00a2ff;}
-a.bandcamp:hover, a.bandcampbold:hover{color: #00a2ff;}
-
-a.spotify, a.spotifybold{text-decoration-color: #00FF00;}
-a.spotify:hover, a.spotifybold:hover{color: #00FF00;}
-
-a.bandcamp, a.spotify{font-weight: normal; text-decoration-thickness: 1px;}
-a.bandcampbold, a.spotifybold{font-weight: bold; text-decoration-thickness: 2px}
-
-a.cafe{text-decoration-color: #9D3C00;}
-a.cafe:hover{color: #9D3C00;}
-
-h1{
-  margin: 0px;
-  font-weight: bold;
-  font-size: xxx-large; 
-  font-style: normal; 
-  margin-top: 20px; 
-  text-shadow: #202020 5px 5px}
-ul {list-style-type: "↳ ";}
-p, ul{max-width: 750px; line-height: 1.5;}
-
-nav{padding: 0px; 
-    background-color:#202020; 
-    min-height: 100vh; 
-    border-right: solid #f0f0f0 2px; 
-    margin-right: 50px;
-    position: fixed;
-    width: 150px}
-
-.main{margin-left: 200px}
+    background-color: #080808;
+    color: #F0F0F0;
+    @import url('https://fonts.googleapis.com/css2?family=Inter');
+    font-family: 'Inter', sans-serif;
+  }
+  .container{
+    width: 500px;
+    margin: 10px auto;
+    padding: 20px;
+    border: solid #F0F0F0 2px;
+    border-radius: 30px;
+    line-height: 1.5;
+  }
+  .centered-container{
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 50%);
+    width: 500px;
+    padding: 20px;
+    border: solid #F0F0F0 2px;
+    border-radius: 30px;
+    line-height: 1.5;}
+  a{color: #F0F0F0;}
+  a:hover{
+    background: #F0F0F0;
+    color: #080808;
+    text-decoration-color: #F0F0F0;
+  }
+  a.discord{color:#303eff;}
+  a.discord:hover{
+    background: #303eff;
+    color: #080808;
+    text-decoration-color: #303eff;
+  }
+  a.bandcamp{color: #00a2ff;}
+  a.bandcamp:hover{
+    background: #00a2ff;
+    color: #080808;
+    text-decoration-color: #00a2ff;
+  }
+  a.spotify{color: #00FF00;}
+  a.spotify:hover{
+    background: #00FF00;
+    color: #080808;
+    text-decoration-color: #00FF00;
+  }
+  a.youtube{color: #FF0000;}
+  a.youtube:hover{
+    background: #FF0000;
+    color: #080808;
+    text-decoration-color: #FF0000;
+  }
+  h1{
+    margin: 0px;
+    font-weight: bold;
+    font-style: italic;
+  }
+  ul {list-style-type: "↳ ";}
