--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -5,27 +5,29 @@
   @font-face{font-family: 'Vera Humana 95';
   font-weight: bold;
   src: url("Verab.ttf")}
-  body {
-    background-color: #020013;
-    color: #f2cf68;
-    font-family: 'Vera Humana 95', sans-serif;
-    line-height: 1.5;
-    font-size: 1.1rem;
-    margin: 0px}
+body {
+  background-color: #020013;
+  color: #f2cf68;
+  font-family: 'Vera Humana 95', sans-serif;
+  line-height: 1.5;
+  font-size: 1.1rem;
+  margin: 0px}
+
+.main{padding: 1rem 1.5rem;}
+
+.back{padding-top:0}
+
+h1{
+  margin: 0;
+  font-weight: bold;
+  font-size: min(8vw, 3rem);
+  line-height: 1.2}
+
+a{color: #f2cf68}
+a:hover{background-color: #f2cf68; color: #020013; text-decoration-color: #f2cf68;}
   
-  .main{padding: 1rem 1.5rem;}
-  
-  .back{padding-top:0}
-  
-  h1{
-    margin: 0;
-    font-weight: bold;
-    font-size: min(8vw, 3rem);
-    line-height: 1.2}
-  
-  a{color: #f2cf68}
-  a:hover{background-color: #f2cf68; color: #020013; text-decoration-color: #f2cf68;}
-  
+.top{display: sticky; top: 1rem; background-color: #020013;}
+
 h2{font-size: 1.2rem}
 
   ul {list-style-type: "└ "; padding-left: 20px}
