--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,6 @@ details[open] summary ~ * {
 }
 
 @keyframes sweep {
-  0%    {opacity: 0; transform: translateY(-0.5rem)}
-  100%  {opacity: 1; transform: translateX(0)}
+  from {opacity: 0; transform: translateY(-0.5rem)}
+  to   {opacity: 1; transform: translateX(0)}
 }
