--- a/styles/style.css
+++ b/styles/style.css
@@ -33,5 +33,5 @@ details[open] summary ~ * {
 
 @keyframes sweep {
   from {opacity: 0; transform: translateY(-0.5rem)}
-  to   {opacity: 1; transform: translateX(0)}
+  to   {opacity: 1; transform: translateY(0)}
 }
