--- a/styles/text-style.css
+++ b/styles/text-style.css
@@ -27,11 +27,11 @@ p, ul{line-height: 1.4; margin-bottom: 0; font-size: min(1.25rem, 5vw)}
   border-right: solid #a0a0a0 2px;
   min-height: 100vh}
 
-  details[open] summary ~ * {
-    animation: sweep .5s cubic-bezier(.08,.82,.17,1);
-  }
-  
-  @keyframes sweep {
-    from  {opacity: 0; transform: translateY(-0.5rem)}
-    to    {opacity: 1; transform: translateX(0)}
-  }
+details[open] summary ~ * {
+  animation: sweep .5s cubic-bezier(.08,.82,.17,1);
+}
+
+@keyframes sweep {
+  from  {opacity: 0; transform: translateY(-0.5rem)}
+  to    {opacity: 1; transform: translateY(0)}
+}
