--- a/styles/text-style.css
+++ b/styles/text-style.css
@@ -16,7 +16,7 @@ h1{
   font-size: 2.5rem;
   line-height: 1.2}
 
-a{color: #404040; font-weight: bold; text-decoration-thickness: 2px;}
+a{color: #404040; font-weight: bold; text-decoration-thickness: 2px; transition: all 0.2s cubic-bezier(.08,.82,.17,1)}
 a:hover{background-color: #404040; color: #d0d0d0; text-decoration-color: #404040;}
 
 ul {list-style-type: "└ "; padding-left: 20px}
