--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -1,4 +1,5 @@
 body {
+  --green: #15c405;
   background-color: #080808;
   color: #f0f0f0;
   font-family: 'Space Grotesk', sans-serif;
@@ -21,18 +22,20 @@ a{font-weight: bold;
   font-style: italic;
   text-decoration-color: #808080;
   text-decoration-thickness: 2px;}
-a:hover{color: #15c405;
-    text-decoration-color: #15c405;}
+a:hover{color: var(--green);
+    text-decoration-color: var(--green);}
 
 h1{text-decoration: underline;
-  text-decoration-color: #15c405;
+  text-decoration-color: var(--green);
   text-decoration-thickness: 2px;}
-h1:before{content: "> ";color: #15c405}
+h1:before{content: "> ";color: var(--green)}
 ul{list-style-type: "> "; padding-left: 20px}
 h2{font-size: 1.5rem;}
-h2:before{content: "- "; color: #15c405;}
+h2:before{content: "- "; color: var(--green);}
 
 p, ul{line-height: 1.4; margin-bottom: 0; font-size: 1rem}
+
+p::selection{background-color: var(--green); color: #080808}
 
 .page{margin: 0 auto; width: min(90%, 35rem);
   border-left: solid #202020 2px;
