--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -4,7 +4,7 @@ body {
   color: #f0f0f0;
   font-family: 'Space Grotesk', sans-serif;
   line-height: 1.5;
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin: 0px}
 
 .main{padding: 1rem 1.5rem;}
@@ -33,7 +33,7 @@ ul{list-style-type: "> "; padding-left: 20px}
 h2{font-size: 1.5rem;}
 h2:before{content: "- "; color: var(--green);}
 
-p, ul{line-height: 1.4; margin-bottom: 0; font-size: 1rem}
+p, ul{line-height: 1.4; margin-bottom: 0}
 
 .page{margin: 0 auto; width: min(90%, 35rem);
   border-left: solid #202020 2px;
