--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -39,3 +39,24 @@ p, ul{line-height: 1.4; margin-bottom: 0}
   border-left: solid #202020 2px;
   border-right: solid #202020 2px;
   min-height: 100vh}
+
+#topbutton{
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: solid var(--green) 2px;
+  outline: none;
+  background-color: #080808;
+  color: var(--green);
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 100%;
+  font-size: 2rem
+}
+
+#topbutton:hover{
+  background-color: var(--green);
+  color: #080808
+}
