--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -40,12 +40,10 @@ p, ul{line-height: 1.4; margin-bottom: 0}
   border-right: solid #202020 2px;
   min-height: 100vh}
 
-#topbutton{
-  display: none;
+.back-to-top{
   position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
+  bottom: 2rem;
+  right: 2rem;
   border: solid var(--green) 2px;
   outline: none;
   background-color: #080808;
@@ -55,8 +53,6 @@ p, ul{line-height: 1.4; margin-bottom: 0}
   border-radius: 100%;
   font-size: 2rem
 }
-
-#topbutton:hover{
-  background-color: var(--green);
-  color: #080808
+.hidden{
+  display: none;
 }
