--- a/newsite/test.css
+++ b/newsite/test.css
@@ -1,5 +1,57 @@
-.test{color: blue}
+/* Desktop (width > 600px) */
+body{
+/* Colors */
+--white:      #f0f0f0;
+--dark-gray:  #404040;
+--light-gray: #a0a0a0;
 
-@media only screen and (max-width: 600px) {
-    .test{color: red}
+background-color: var(--white);
+color: var(--dark-gray);
+
+font-family: 'Inter', sans-serif;
+font-size: 1rem;
+line-height: 1.4;
+
+display: flex;
+margin: 0;
+min-height: 100vh
 }
+
+.navbar{display: none}
+
+.sidebar{width: min(160px, 20vw);
+border-right: solid var(--light-gray) 2px;
+height: 100vh; position: sticky; top: 0}
+.sidebar ul{margin-top: -16px}
+.sidebar div{margin: 24px auto; width: fit-content}
+
+.main{flex: 1; overflow-y: scroll;
+padding: 24px}
+
+ul{padding-left: 20px; list-style-type: "└ "}
+
+a{color: var(--dark-gray); 
+    transition: all 0.2s cubic-bezier(.08,.82,.17,1)}
+a:hover{background-color: var(--dark-gray); color: var(--white);
+text-decoration-color: var(--dark-gray)}
+
+h1{font-size: min(8vw, 3rem); margin: 0; line-height: 1.2}
+
+
+
+/* Mobile (width < 600px) */
+@media only screen and (max-width: 600px) {
+    body{display: inline-block;
+    width: 100vw; height: 100vh}
+
+    .sidebar{display: none}
+
+    .navbar{display:inline-block}
+
+    .main{padding: 16px 24px; margin: 0 16px; 
+    border-right: solid var(--light-gray) 2px;
+    border-left: solid var(--light-gray) 2px;
+    height: calc(100vh - 32px)}
+
+}
+
