--- a/newsite/test.css
+++ b/newsite/test.css
@@ -26,7 +26,8 @@ height: 100vh; position: sticky; top: 0}
 .sidebar div{margin: 24px auto; width: fit-content}
 
 .main{flex: 1; overflow-y: scroll;
-padding: 24px}
+padding: 24px;
+max-width: 35rem}
 
 ul{padding-left: 20px; list-style-type: "└ "}
 
