--- a/styles/test.css
+++ b/styles/test.css
@@ -38,6 +38,14 @@ text-decoration-color: var(--dark-gray)}
 
 h1{font-size: min(8vw, 3rem); margin: 0; line-height: 1.2}
 
+details[open] summary ~ * {
+    animation: sweep .5s cubic-bezier(.08,.82,.17,1);
+  }
+  
+  @keyframes sweep {
+    from {opacity: 0; transform: translateY(-0.5rem)}
+    to   {opacity: 1; transform: translateY(0)}
+  }
 
 
 /* Mobile (width < 600px) */
