--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -43,7 +43,9 @@ h1{
   margin: 0;
   font-weight: bold;
   font-size: 2.5rem;
-  line-height: 1.2}
+  line-height: 1.2;
+  text-decoration-color: var(--green);
+  text-decoration-thickness: 3px}
 h1:before{content: "> "; color: var(--green)}
 h2{font-size: 1.5rem}
 h2:before{content: "- "; color: var(--green);}
