--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -62,6 +62,6 @@ h2:before{content: "- "; color: var(--green);}
     .main{padding: 16px 24px; margin: 0 16px; 
     border-right: solid var(--light-gray) 2px;
     border-left: solid var(--light-gray) 2px;
-    height: calc(100vh - 32px)}
+    min-height: calc(100vh - 32px)}
 
 }
